[project]
name = "breathe"
version = "0.1.0"
description = "An interval tracking app for maintaining equipment"
readme = "README.md"
authors = [{ name = "nielbarasona", email = "niel.j.barasona@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
breathe = "breathe.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.14"
include = ["src"]
extraPaths = ["src"]

[tool.ruff]
line-length = 88

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.8"]
